--- a/plutus-nft/plutus-nft.cabal
+++ b/plutus-nft/plutus-nft.cabal
@@ -2,37 +2,67 @@ cabal-version:      2.4
 name:               plutus-nft
 version:            0.1.0.0
 
--- A short (one-line) description of the package.
--- synopsis:
+description:  Example of nft script on plutus
+author:       Ahmad Howaiji
 
--- A longer description of the package.
--- description:
 
--- A URL where users can report bugs.
--- bug-reports:
+Flag unexpected_thunks
+  Description:   Turn on unexpected thunks checks
+  Default:       False
 
--- The license under which the package is released.
--- license:
+common base
+  build-depends: base >= 4.14 && < 4.15
 
--- The package author(s).
--- author:
+common project-config
+  default-language:     Haskell2010
 
--- An email address to which users can send suggestions, bug reports, and patches.
--- maintainer:
+  default-extensions:   NoImplicitPrelude
+                        OverloadedStrings
 
--- A copyright notice.
--- copyright:
--- category:
-extra-source-files: CHANGELOG.md
+  ghc-options:          -Wall
+                        -Wcompat
+                        -Wincomplete-record-updates
+                        -Wincomplete-uni-patterns
+                        -Wpartial-fields
+                        -Wredundant-constraints
+                        -Wunused-packages
+
+common maybe-Win32
+  if os(windows)
+     build-depends:    Win32
+
+library
+  import:               base, project-config
+                      , maybe-Win32
+
+  if flag(unexpected_thunks)
+    cpp-options: -DUNEXPECTED_THUNKS
+
+  hs-source-dirs:       src
+
+  exposed-modules:      PlutusNft
+
+  build-depends:        bytestring
+                      , cardano-api
+                      , flat
+                      , plutus-core
+                      , plutus-ledger
+                      , plutus-ledger-api
+                      , plutus-tx
+                      , plutus-tx-plugin
+                      , serialise
+
+  ghc-options: -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
 
 executable plutus-nft
-    main-is:          Main.hs
-
-    -- Modules included in this executable, other than Main.
-    -- other-modules:
-
-    -- LANGUAGE extensions used by modules in this package.
-    -- other-extensions:
-    build-depends:    base ^>=4.14.1.0
+    import:           base, project-config
+    main-is:          plutus-nft.hs
     hs-source-dirs:   app
-    default-language: Haskell2010
+    ghc-options:      -threaded -rtsopts "-with-rtsopts=-T"
+  
+    build-depends:    cardano-api
+                    , cardano-ledger-alonzo
+                    , plutus-ledger
+                    , plutus-ledger-api
+                    , bytestring
+                    , plutus-nft
