adding minting script

--- a/plutus-nft/plutus-nft.cabal
+++ b/plutus-nft/plutus-nft.cabal
@@ -43,6 +43,7 @@ library
   exposed-modules:      PlutusNft
 
   build-depends:        bytestring
+                      , hex
                       , cardano-api
                       , flat
                       , plutus-core
