--- a/plutus-nft/plutus-nft.cabal
+++ b/plutus-nft/plutus-nft.cabal
@@ -67,3 +67,4 @@ executable plutus-nft
                     , plutus-ledger-api
                     , bytestring
                     , plutus-nft
+                    , hex
