--- a/cabal.project
+++ b/cabal.project
@@ -2,6 +2,7 @@ index-state: 2021-04-30T00:00:00Z
 
 packages:
     plutus-nft
+    oracle
 
 package cryptonite
   -- Using RDRAND instead of /dev/urandom as an entropy source for key
